tests/spec/compile-fail/137_trust_raw_memory_denied_by_manifest.zn
// category: compile-fail
// profile: freestanding
// trust.rawMemory: false
// purpose: manifest rawMemory capability gates raw pointer operations inside trust blocks

module tests.fail.trustRawMemoryDeniedByManifest;

fn bad(address: USize) -> U8 {
    return trust {
        RawPointer<U8>.fromAddress(address).read() // expected-error: manifest does not allow rawMemory trust capability
    };
}
